# async_faceit_api

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: conf.py  requirements.txt
examples/: example.py  subclassing.py
src/async_faceit_api/: __init__.py  api.py  data_api.py  dataclasses.py  enums.py  webhooks.py
src/async_faceit_api/dataclasses/: data_api.py  enums.py  events.py
src/async_faceit_api/types/: __init__.py  dataclasses.py  enums.py
src/docs/: conf.py  examples.rst  index.rst  modules.rst
src/docs/_build/html/: .buildinfo  api.html  async_faceit_api.dataclasses.html  async_faceit_api.html  async_faceit_api.types.html  error_handling.html  examples.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.html  src.types.html  types.html  usage.html  useful_links.html
src/docs/_build/html/.doctrees/: api.doctree  async_faceit_api.dataclasses.doctree  async_faceit_api.doctree  async_faceit_api.types.doctree  error_handling.doctree  examples.doctree  index.doctree  modules.doctree  src.doctree  src.types.doctree  types.doctree  usage.doctree  useful_links.doctree
src/docs/_build/html/_modules/: index.html  types.html
src/docs/_build/html/_sources/: async_faceit_api.dataclasses.rst.txt  async_faceit_api.rst.txt  async_faceit_api.types.rst.txt  error_handling.rst.txt  modules.rst.txt  src.rst.txt  src.types.rst.txt  types.rst.txt  (+2 more)
tests/: example.py  subclassing.py  test.py  test_data_api.py  test_webhook.py
utils/: create_data_classes.py  created_classes.py  data_file.json
(+13 files in other folders)
