[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "async_faceit_api"
version = "0.1.0"
authors = [
  { name="Stuart", email="stuart.the.yellow.one@gmail.com" },
]
description = "Async wrapper for the faceit API for csgo"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/StuartTheYellowOne/async_faceit_api"
"Bug Tracker" = "https://github.com/StuartTheYellowOne/async_faceit_api/issues"

